--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "antd": "^4.16.13",
+    "immer": "^9.0.6",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "use-immer": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
