--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "antd": "^4.16.13",
@@ -14,9 +15,12 @@
     "use-immer": "^0.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "jest": "^27.2.3",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
   }
