--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "antd": "^4.16.13",
     "immer": "^9.0.6",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "use-immer": "^0.6.0"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
